--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -4,6 +4,13 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_BLE=y
 
+# Debug logging for sensor testing
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_PMW3610_LOG_LEVEL_DBG=y
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_PMW3610_FORCE_AWAKE=y
+
 
 
 CONFIG_SPI=y
